# ros-nice-node

./: .gitignore  README.md
nice_node_py/: package.xml  setup.cfg  setup.py
nice_node_py/docs/: conf.py  index.rst  modules.rst  nice_node.rst  nice_node.utils.rst
nice_node_py/launch/: demo.launch.py
nice_node_py/nice_node/: __init__.py  nice_node.py  types.py
nice_node_py/nice_node/demo/: pub.py  sub.py
nice_node_py/nice_node/utils/: __init__.py  aio.py  misc.py  node.py  params.py
nicefaces/: CMakeLists.txt  package.xml
nicefaces/msg/: AnyLabel.msg  AnyLabelArray.msg  AnyLabels.msg  BBox2D.msg  BBox2DArray.msg  BBox2Ds.msg  BodyKeypoint.msg  FeatureData.msg  ObjDet2D.msg  ObjDet2DArray.msg  ObjDet2Ds.msg  Pred2D.msg  Pred2DArray.msg  ProfilingData.msg  TrackData.msg  WholeBody.msg  WholeBodyArray.msg
nicefaces_utils_py/: package.xml  setup.cfg  setup.py
nicepynode/: package.xml  setup.cfg  setup.py
nicepynode/nicepynode/: __init__.py  aioutils.py  bbox_converter.py  job.py  utils.py
