<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nice_node_py</name>
  <version>0.0.0</version>
  <description>webserver-inspired ROS2 API</description>
  <maintainer email="42513874+Interpause@users.noreply.github.com">John-Henry Lim</maintainer>
  <license>MIT</license>

  <exec_depend>python-attrs-pip</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
