<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nicepynode</name>
  <version>0.1.0</version>
  <description>High-level Python API to make ROS easier.</description>
  <maintainer email="42513874+Interpause@users.noreply.github.com">John-Henry Lim</maintainer>
  <license>MIT</license>

  <exec_depend>nicefaces</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
